--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@
     <h2>Dvorak as first class citizen</h2>
     <p>I love dvorak. And I intend on using it with InterstellarOS so I will be making sure there is first class support for both qwerty and dvorak since those are the ones I will be in contact with. I do however intend on making it as easy as possible for others to contribute with bindings for other non qwerty layouts. The goal is to be able to navigate the OS with the same physical keys on any layout. And to be able to swap layout on the fly with ease.
     <h3>Contact</h3>
-    <p> If this has piqued your interest or you just feel like contacting me please do so. My email is sam.henning.smith@protonmail.com.
+    <p> If this has piqued your interest or you just feel like contacting me please do so. My email is sam.henning.smith@protonmail.com. I might also be posting about stuff I'm doing on <a href="https://twitter.com/SamHSmith2">twitter</a>.
 </article>
